# RealEstateHubAPI

./: .env  README.md  alembic.ini  db.sqlite3  file.py  pyproject.toml
alembic/: env.py
alembic/versions/: 2025_09_24_1840-7f0f06770d91_initial_migration.py  2025_09_24_2041-bfdbfeafef20_add_views_table.py
app/: database.py  main.py
app/core/: config.py
app/models/: __init__.py  amenity.py  base.py  category.py  deal.py  favorite.py  message.py  notification.py  photo.py  photos.py  profile.py  property.py  property_amenity_assoc.py  review.py  task.py  user.py  view.py
app/repository/user/: user_crud.py  user_schemas.py
app/tests/: test_user_model.py
