[tool.poetry]
name = "realestatehub-api"
version = "0.1.0"
description = "Online real estate management service"
authors = ["Maksim Brynkevich"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12.3"
fastapi = "^0.116.2"
sqlalchemy = "^2.0.43"
uvicorn = {extras = ["standard"], version = "^0.35.0"}
psycopg2-binary = "^2.9.10"
alembic = "^1.16.5"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-multipart = "^0.0.20"
pydantic-settings = "^2.10.1"
redis = "^6.4.0"
structlog = "^25.4.0"
pyjwt = "^2.10.1"
aiosqlite = "^0.21.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.4.2"
pytest-cov = "^7.0.0"
pytest-asyncio = "^1.2.0"
httpx = "^0.28.1"
mypy = "^1.18.2"


[tool.poetry.group.mypy.dependencies]
black = "^25.1.0"
flake8 = "^7.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
